--- a/frontend/html/tempgen.html
+++ b/frontend/html/tempgen.html
@@ -57,6 +57,6 @@
   <!-- Quill Script -->
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
   <!-- Your Script -->
-  <script src="js/script.js"></script>
+  <script src="../js/lettergenscript.js"></script>
 </body>
 </html>
