--- a/frontend/html/generateletter.html
+++ b/frontend/html/generateletter.html
@@ -64,15 +64,16 @@
               <div class="col-md-6">
                 <label for="tone">Tone of Response:</label>
                 <select class="form-control" id="tone" name="tone">
-                  <option value="Polite">Polite</option>
-                  <option value="Formal" selected>Formal</option>
                   <option value="Neutral">Neutral</option>
+                  <option value="Polite">Polite</option>
+                  <option value="Assertive" selected>Asserive</option>
                   <option value="Angry">Angry</option>
+                  <option value="Threatening">Threatening</option>
                 </select>
               </div>
               <div class="col-md-6">
                 <label for="file">Upload Rental Contract:</label>
-                <input type="file" class="form-control" id="file" name="file" accept=".pdf,.doc,.docx">
+                <input type="file" class="form-control" id="file" name="file" accept=".pdf">
               </div>
             </div>
 
