Updated front end. Fixed bugs.

--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -43,8 +43,8 @@
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
         <a class="nav-link" href="html/generateletter.html">Generate</a>
-        <a class="nav-link" href="#">Our Mission</a>
-        <a class="nav-link" href="#">About Us</a>
+        <a class="nav-link" href="html/ourmission.html">Our Mission</a>
+        <a class="nav-link" href="html/aboutus.html">About Us</a>
       </nav>
     </div>
   </header>
