--- a/frontend/html/generateletter.html
+++ b/frontend/html/generateletter.html
@@ -66,7 +66,7 @@
                 <select class="form-control" id="tone" name="tone">
                   <option value="Neutral">Neutral</option>
                   <option value="Polite">Polite</option>
-                  <option value="Assertive" selected>Asserive</option>
+                  <option value="Concerned" selected>Concerned</option>
                   <option value="Angry">Angry</option>
                   <option value="Threatening">Threatening</option>
                 </select>
