--- a/frontend/html/ourmission.html
+++ b/frontend/html/ourmission.html
@@ -43,18 +43,15 @@
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link" href="../homepage.html">Home</a>
         <a class="nav-link" href="generateletter.html">Generate</a>
-        <a class="nav-link active"  aria-current="page" href="#">Our Mission</a>
+        <a class="nav-link active" aria-current="page" href="#">Our Mission</a>
         <a class="nav-link" href="aboutus.html">About Us</a>
       </nav>
     </div>
   </header>
 
   <main class="px-3">
-    <h1>Rentalyze</h1>
-    <p class="lead">AI-powered rental dispute assistance. Upload your contract, describe your issue, and get a customized, clause-based response letter to resolve disputes with ease.</p>
-    <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Get started</a>
-    </p>
+    <h1>Our Mission</h1>
+    <p class="lead">Empowering Irish tenants to effectively address rental issues through AI-generated, clause-based formal complaint letters. By enabling tenants to input their rental contracts and key details, Rentalyze assists in crafting well-structured letters that facilitate conflict resolution before legal action becomes necessary. In Ireland's challenging rental market, where landlords may lack the incentive to resolve problems, our goal is to promote fair communication and uphold tenants' rights, contributing to a more just and equitable housing environment.</p>
   </main>
 
   <footer class="mt-auto text-white-50">
