Removed redundancy in language

--- a/frontend/html/aboutus.html
+++ b/frontend/html/aboutus.html
@@ -26,14 +26,10 @@
             <div class="company-name">About Us</div>
             <h2>Our Project</h2>
             <p>
-                "RentaLyze" combines artificial intelligence with legal expertise to address housing and rental challenges.
-                By utilising technologies such as Python, Bootstrap, and OpenAI's GPT, we developed an AI-powered tool for 
-                analysing rental agreements, generating dispute resolution letters, and guiding users through tenant-landlord 
-                issues.
-            </p>
-            <p>
-                Our goal is to streamline the rental experience, making housing more accessible and fair 
-                by leveraging AI's potential to enhance efficiency in dispute management and communication.
+                As students, finding suitable accommodation has always been a challenge, especially with the ongoing housing crisis in Dublin. 
+                Oftentimes, the available options we do find come with poor living conditions. 
+                With RentaLyze, we aim to address this overlooked issue, not just for students but for renters nationwide. 
+                Our goal is to help improve living conditions and simplify tenant-landlord disputes, making the rental experience fairer and more accessible for everyone.
             </p>
 
             <h2>The RentaLyze Team</h2>
