--- a/frontend/html/Homepage.html
+++ b/frontend/html/Homepage.html
@@ -25,7 +25,7 @@
     <section class="section" id="hero">
         <div class="section-content">
             <div class="company-name">RentaLyze</div>
-            <h1>Where Housing Disputes,<br>Meet Smart Resolutions</h1>
+            <h1>Where Rental Disputes,<br>Meet Smart Resolutions</h1>
             <a href="generateletter.html" class="cta-button">Get Started</a>
         </div>
     </section>
