--- a/frontend/html/aboutus.html
+++ b/frontend/html/aboutus.html
@@ -24,7 +24,7 @@
     <section class="section" id="about">
         <div class="section-content">
             <div class="company-name">About Us</div>
-            <h2>Our Project</h2>
+            <h2>- Our Project</h2>
             <p>
                 As students, finding suitable accommodation has always been a challenge, especially with the ongoing housing crisis in Dublin. 
                 Oftentimes, the available options we do find come with poor living conditions. 
@@ -32,7 +32,7 @@
                 Our goal is to help improve living conditions and simplify tenant-landlord disputes, making the rental experience fairer and more accessible for everyone.
             </p>
 
-            <h2>The RentaLyze Team</h2>
+            <h2>- The RentaLyze Team</h2>
 
             <h3><u>Frontend Developers</u></h3>
             <ul>
